@@ -215,13 +215,16 @@ void IEditable::SetName(const string& name)
     if (pt == nullptr)
         return;
 
+    char oldName[sizeof(GetScriptable()->m_wzName)/sizeof(GetScriptable()->m_wzName[0])];
+    WideCharToMultiByteNull(CP_ACP, 0, GetScriptable()->m_wzName, -1, oldName, sizeof(oldName), nullptr, nullptr);
+
     WCHAR newName[sizeof(GetScriptable()->m_wzName)/sizeof(GetScriptable()->m_wzName[0])];
     const WCHAR* namePtr = newName;
     MultiByteToWideCharNull(CP_ACP, 0, name.c_str(), -1, newName, sizeof(GetScriptable()->m_wzName)/sizeof(GetScriptable()->m_wzName[0]));
     const bool isEqual = (wcscmp(newName, GetScriptable()->m_wzName) == 0);
-    WCHAR uniqueName[sizeof(GetScriptable()->m_wzName)/sizeof(GetScriptable()->m_wzName[0])];
     if(!isEqual && !pt->IsNameUnique(newName))
     {
+       WCHAR uniqueName[sizeof(GetScriptable()->m_wzName)/sizeof(GetScriptable()->m_wzName[0])];
        pt->GetUniqueName(newName, uniqueName, sizeof(uniqueName) / sizeof(uniqueName[0]));
        namePtr = uniqueName;
     }
@@ -231,6 +234,30 @@ void IEditable::SetName(const string& name)
     lstrcpynW(GetScriptable()->m_wzName, namePtr, sizeof(GetScriptable()->m_wzName)/sizeof(GetScriptable()->m_wzName[0]));
     g_pvp->GetLayersListDialog()->UpdateElement(this);
     g_pvp->SetPropSel(GetPTable()->m_vmultisel);
+
+    if (GetItemType() == eItemSurface && g_pvp->MessageBox("Replace the name also in all table elements that use this surface?", "Replace", MB_ICONQUESTION | MB_YESNO) == IDYES)
+    for (size_t i = 0; i < pt->m_vedit.size(); i++)
+    {
+       IEditable *const pedit = pt->m_vedit[i];
+       if (pedit->GetItemType() == ItemTypeEnum::eItemBumper && ((Bumper *)pedit)->m_d.m_szSurface == oldName)
+          ((Bumper *)pedit)->m_d.m_szSurface = name;
+       else if (pedit->GetItemType() == ItemTypeEnum::eItemDecal && ((Decal *)pedit)->m_d.m_szSurface == oldName)
+          ((Decal *)pedit)->m_d.m_szSurface = name;
+       else if (pedit->GetItemType() == ItemTypeEnum::eItemFlipper && ((Flipper *)pedit)->m_d.m_szSurface == oldName)
+          ((Flipper *)pedit)->m_d.m_szSurface = name;
+       else if (pedit->GetItemType() == ItemTypeEnum::eItemGate && ((Gate *)pedit)->m_d.m_szSurface == oldName)
+          ((Gate *)pedit)->m_d.m_szSurface = name;
+       else if (pedit->GetItemType() == ItemTypeEnum::eItemKicker && ((Kicker *)pedit)->m_d.m_szSurface == oldName)
+          ((Kicker *)pedit)->m_d.m_szSurface = name;
+       else if (pedit->GetItemType() == ItemTypeEnum::eItemLight && ((Light *)pedit)->m_d.m_szSurface == oldName)
+          ((Light *)pedit)->m_d.m_szSurface = name;
+       else if (pedit->GetItemType() == ItemTypeEnum::eItemPlunger && ((Plunger *)pedit)->m_d.m_szSurface == oldName)
+          ((Plunger *)pedit)->m_d.m_szSurface = name;
+       else if (pedit->GetItemType() == ItemTypeEnum::eItemSpinner && ((Spinner *)pedit)->m_d.m_szSurface == oldName)
+          ((Spinner *)pedit)->m_d.m_szSurface = name;
+       else if (pedit->GetItemType() == ItemTypeEnum::eItemTrigger && ((Trigger *)pedit)->m_d.m_szSurface == oldName)
+          ((Trigger *)pedit)->m_d.m_szSurface = name;
+    }
     STOPUNDO
 }
 
